Highlight a menu when it is a drop target

When a menu is open due to being dropped over, we should show it as
highlighted to make the drop target clearer. This CL enables
showing the highlight for such case, and when the menu is closed the
menu should return to normal state.

Highlighting the menu was implemented in Cocoa browser on Mac before,
but not done for Views or other platforms. This CL will enable this
feature for all Views based browser across platforms.

BUG=838598

Change-Id: I11ac21d03110598b122e1345e36cc2e16f47519b
Reviewed-on: https://chromium-review.googlesource.com/1057964
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560692}
Former-commit-id: 9dfac85deda1b8a9fe03d38f72a78a6e2b8b1dd5